<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Overhear</string>
    <string name="recent_str">Recent</string>
    <string name="artists_str">Artists</string>
    <string name="albums_str">Albums</string>
    <string name="songs_str">Songs</string>
    <string name="genres_str">Genres</string>
    <string name="playlists_str">Playlists</string>
    <string name="no_recents">No recents</string>
    <string name="no_artists">No artists</string>
    <string name="no_albums">No albums</string>
    <string name="no_songs">No songs</string>
    <string name="no_genres">No genres</string>
    <string name="no_playlists">No playlists</string>
    <string name="bio_str">Bio</string>
    <string name="updates_str">Updates</string>
    <string name="shop_artist_str">Shop Artist</string>
    <string name="no_audio_focus">Another app currently has audio focus.</string>

    <string name="social_update_source">{time} via {user} on {network}</string>
    <string name="failed_load_artist_bio">Error occurred while loading bio</string>
    <string name="login_str">Login</string>
    <string name="login_twitter">Login to Twitter</string>
    <string name="social_profile_none">No social profile.</string>
    <string name="no_social_profile">No verified social profile was found. Tap and hold to manually choose one.</string>
    <string name="no_bio_str">No biography was found</string>
    <string name="loading_str">Loading…</string>
    <string name="error_str">Error</string>

    <string name="tweet_now_playing">Tweet #NowPlaying</string>
    <string name="tweet_str">Tweet</string>
    <string name="tweeted_str">Tweeted!</string>
    <string name="failed_tweet_str">Failed to send your tweet… {error}</string>
    <string name="now_playing_hash">#NowPlaying</string>
    <string name="title_activity_now_playing_viewer">Now Playing</string>
    <string name="now_playing_tweet_content">#NowPlaying - {title} by {artist} via @OverhearApp</string>

    <string name="search_str">Search</string>

    <string name="sleep_timer_str">Sleep Timer</string>
    <string name="search_hint">Type your query…</string>
    <string name="no_results_str">No results</string>
    <string name="sleep_in_x">Sleep in {x} minutes</string>
    <string name="sleep_in_one">Sleep in 1 minute</string>
    <string name="slept_at_str">Slept at {time}</string>
    <string name="sleep_timer_cancelled">Sleep timer cancelled!</string>

    <string name="about_str">About</string>
    <string name="about_body"><![CDATA[
        Coded by Aidan Follestad (@afollestad). Icon by Nathanel Titane (@nathaneltitane).<br/><br/>Follow Overhear! @OverhearApp
    ]]></string>
    <string name="app_name_and_version" translatable="false"><![CDATA[
        <b>Overhear</b>&nbsp;<font color="#888888">v%1$s</font>
    ]]></string>
    <string name="close_str">Close</string>
    <string name="twitter_str">Twitter</string>
    <string name="none_str">None</string>
    <string name="alternate_accounts">Alternate Accounts</string>

    <string name="redownloading_art">Downloading album art…</string>
    <string name="redownload_art">Download Artwork</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="add_to_queue">Add to Queue</string>
    <string name="play_all">Play</string>
    <string name="download_queued">Album art will be downloaded when a connection is available!</string>
    <string name="view_album">View Album</string>
    <string name="view_artist">View Artist</string>

    <string name="clear_recents">Clear Recents</string>
    <string name="create_playlist">New Playlist</string>
    <string name="create_playlist_ellipsis">New Playlist…</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="playlist_clear_confirm">Are you sure you want to remove all songs from the playlist {name}?</string>
    <string name="playlist_delete_confirm">Are you sure you want to delete the playlist {name}?</string>
    <string name="yes_str">Yes</string>
    <string name="no_str">No</string>
    <string name="new_playlist_name_hint">Playlist name</string>
    <string name="added_to_playist">\"{name}\" added to {list}!</string>
    <string name="artist_details">{albums} albums, {tracks} tracks</string>
    
    <string name="unknown_str">Unknown</string>
    <string name="favorites_str">Favorites</string>
    <string name="favorite_str">Favorite</string>
    <string name="unfavorite_str">Unfavorite</string>
    <string name="clear_str">Clear</string>
    
    <string name="repeat_off">Repeat Off</string>
    <string name="repeat_once">Repeat Once</string>
    <string name="repeat">Repeat</string>
    <string name="remove_str">Remove</string>

    <string name="equalizer_str">Equalizer</string>
    <string name="user_defined">User defined</string>
    <string name="bass_boost">Bass Boost</string>

    <string-array name="bass_boost_settings">
        <item>Weakest</item>
        <item>Moderate</item>
        <item>Strongest</item>
    </string-array>

</resources>