<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/favorite"
        android:title="@string/favorite_str"
        android:icon="@drawable/ic_unfavorited"
        android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/equalizer"
        android:title="@string/equalizer_str"
        android:icon="@drawable/ic_equalizer"
        android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/tweetPlaying"
        android:title="@string/tweet_now_playing" />
    <item
        android:id="@+id/sleepTimer"
        android:title="@string/sleep_timer_str"
        android:icon="@drawable/ic_sleep_timer"
        android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/addToPlaylist"
        android:title="@string/add_to_playlist"/>
    <item
        android:id="@+id/redownloadArt"
        android:title="@string/redownload_art"/>
</menu>